syntax = "proto3";

package api.task;

import "google/api/annotations.proto";
import "api/task/task.proto";
import "api/task/persist.proto";

option go_package = "api/task";

service TaskService {
	rpc ListTasks (ListTasksRequest) returns (ListTasksResponse) {
		option (google.api.http) = {
			post: "/api/task/list"
			body: "*"
		};
	}
	rpc RetryTask (RetryTaskRequest) returns (RetryTaskResponse) {
		option (google.api.http) = {
			post: "/api/task/retry"
			body: "*"
		};
	}
	rpc CancelTask (CancelTaskRequest) returns (CancelTaskResponse) {
		option (google.api.http) = {
			post: "/api/task/cancel"
			body: "*"
		};
	}
	rpc RemoveTask (RemoveTaskRequest) returns (RemoveTaskResponse) {
		option (google.api.http) = {
			post: "/api/task/remove"
			body: "*"
		};
	}

	rpc ListPersistTasks (ListPersistTasksRequest) returns (ListPersistTasksResponse) {
		option (google.api.http) = {
			get: "/api/task/persist/list"
		};
	}
	rpc CreatePersistTask (CreatePersistTaskRequest) returns (CreatePersistTaskResponse) {
		option (google.api.http) = {
			post: "/api/task/persist"
			body: "*"
		};
	}
	rpc UpdatePersistTask (UpdatePersistTaskRequest) returns (UpdatePersistTaskResponse) {
		option (google.api.http) = {
			put: "/api/task/persist/{payload.id}"
			body: "payload"
		};
	}
	rpc DeletePersistTask (DeletePersistTaskRequest) returns (DeletePersistTaskResponse) {
		option (google.api.http) = {
			delete: "/api/task/persist/{id}"
		};
	}
	rpc TestPersistTask (TestPersistTaskRequest) returns (TestPersistTaskResponse) {}
	rpc ExecutePersistTask (ExecutePersistTaskRequest) returns (ExecutePersistTaskResponse) {}
}